--- a/public/scss/App.scss
+++ b/public/scss/App.scss
@@ -1,7 +1,7 @@
 // Fontawesome
-@import "../../node_modules/@fortawesome/fontawesome-free/scss/brands";
-@import "../../node_modules/@fortawesome/fontawesome-free/scss/solid";
-@import "../../node_modules/@fortawesome/fontawesome-free/scss/fontawesome";
+//@import "../../node_modules/@fortawesome/fontawesome-free/scss/brands";
+//@import "../../node_modules/@fortawesome/fontawesome-free/scss/solid";
+//@import "../../node_modules/@fortawesome/fontawesome-free/scss/fontawesome";
 // Custom Css
 @import "custom";
 // Bootstrap
